refactor: remove javadoc and format code