@@ -1,10 +1,10 @@
 package com.twitter.service;
 
-import com.twitter.common.dto.request.tweet.CreateTweetRequestDto;
-import com.twitter.common.dto.request.tweet.DeleteTweetRequestDto;
 import com.twitter.common.dto.request.follow.FollowRequestDto;
 import com.twitter.common.dto.request.like.LikeTweetRequestDto;
 import com.twitter.common.dto.request.retweet.RetweetRequestDto;
+import com.twitter.common.dto.request.tweet.CreateTweetRequestDto;
+import com.twitter.common.dto.request.tweet.DeleteTweetRequestDto;
 import com.twitter.common.dto.request.user.UserRequestDto;
 import com.twitter.common.dto.response.tweet.TweetResponseDto;
 import com.twitter.common.dto.response.user.UserResponseDto;
@@ -23,68 +23,10 @@ import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.UUID;
+import java.util.*;
 
 /**
  * Implementation of the service for executing the base administrative script.
- * <p>
- * This service executes a comprehensive administrative script that performs the following steps:
- * 1. Step 1: Create users - Generates the specified number of users with random data
- * 2. Step 1.5: Create follow relationships - Creates follow relationships between users:
- *   - Selects the first created user as the central user
- *   - The central user follows half of the remaining users
- *   - Half of the remaining users follow the central user
- *   - Uses integer division (rounding down) to calculate half count
- *   - Requires at least 2 users to create follow relationships
- * 3. Step 2: Create tweets - Creates tweets for each successfully created user (caches TweetResponseDto for later use)
- * 4. Step 3: Calculate users with tweets - Determines which users have tweets
- * 5. Step 4: Validate deletion count - Validates business rules for tweet deletion
- * 6. Step 5: Delete tweets - Deletes one tweet from random users (if validation passes)
- * 7. Step 6: Create likes (half of users) - Creates likes for a random tweet:
- *   - Selects a random tweet from created tweets (using Collections.shuffle())
- *   - Gets the tweet author from cached TweetResponseDto
- *   - Selects half of available users, excluding the tweet author
- *   - Creates likes for each selected user
- *   - Handles errors gracefully (self-like, duplicates): logs and adds to errors, continues execution
- * 8. Step 7: Create likes (third of users) - Creates likes for a different random tweet:
- *   - Selects a different random tweet (not used in step 6)
- *   - Gets the tweet author from cached TweetResponseDto
- *   - Selects third of available users, excluding the tweet author
- *   - Creates likes for each selected user
- *   - Handles errors gracefully: logs and adds to errors, continues execution
- * 9. Step 8: Create likes (1 user) - Creates one like for a different random tweet:
- *   - Selects a different random tweet (not used in steps 6-7)
- *   - Gets the tweet author from cached TweetResponseDto
- *   - Selects 1 available user, excluding the tweet author
- *   - Creates one like for the selected user
- *   - Handles errors gracefully: logs and adds to errors, continues execution
- * 10. Step 9: Create retweets (half of users) - Creates retweets for a different random tweet:
- *   - Selects a different random tweet (not used in steps 6-8)
- *   - Gets the tweet author from cached TweetResponseDto
- *   - Selects half of available users, excluding the tweet author
- *   - Creates retweets for each selected user (with comment = null)
- *   - Handles errors gracefully (self-retweet, duplicates): logs and adds to errors, continues execution
- * 11. Step 10: Create retweets (third of users) - Creates retweets for a different random tweet:
- *   - Selects a different random tweet (not used in steps 6-9)
- *   - Gets the tweet author from cached TweetResponseDto
- *   - Selects third of available users, excluding the tweet author
- *   - Creates retweets for each selected user (with comment = null)
- *   - Handles errors gracefully: logs and adds to errors, continues execution
- * 12. Step 11: Create retweets (1 user) - Creates one retweet for a different random tweet:
- *   - Selects a different random tweet (not used in steps 6-10)
- *   - Gets the tweet author from cached TweetResponseDto
- *   - Selects 1 available user, excluding the tweet author
- *   - Creates one retweet for the selected user (with comment = null)
- *   - Handles errors gracefully: logs and adds to errors, continues execution
- * 13. Step 12: Build response - Collects statistics and builds the response DTO
- * <p>
- * The service handles partial failures gracefully: errors are logged and added to the
- * statistics.errors list, but execution continues to maximize successful operations.
  *
  * @author geron
  * @version 1.0
@@ -143,7 +85,7 @@ public class BaseScriptServiceImpl implements BaseScriptService {
         log.info("Step 1.5: Creating follow relationships");
         int totalFollowsCreated = 0;
         if (createdUsers.size() >= 2) {
-            UUID centralUser = createdUsers.get(0);
+            UUID centralUser = createdUsers.getFirst();
             List<UUID> otherUsers = new ArrayList<>(createdUsers.subList(1, createdUsers.size()));
             int halfCount = (createdUsers.size() - 1) / 2;
 
@@ -282,7 +224,7 @@ public class BaseScriptServiceImpl implements BaseScriptService {
                     if (!tweetsList.isEmpty()) {
                         // Select random tweet
                         Collections.shuffle(tweetsList);
-                        TweetResponseDto tweetToDelete = tweetsList.get(0);
+                        TweetResponseDto tweetToDelete = tweetsList.getFirst();
 
                         DeleteTweetRequestDto deleteRequest = DeleteTweetRequestDto.builder()
                             .userId(userId)
@@ -312,24 +254,24 @@ public class BaseScriptServiceImpl implements BaseScriptService {
         int totalLikesCreated = 0;
         int totalRetweetsCreated = 0;
         List<UUID> usedTweets = new ArrayList<>();
-        
-        if (createdTweets.size() >= 1 && createdUsers.size() >= 2) {
+
+        if (!createdTweets.isEmpty() && createdUsers.size() >= 2) {
             List<UUID> availableTweets = new ArrayList<>(createdTweets);
             Collections.shuffle(availableTweets);
             UUID selectedTweetId = availableTweets.getFirst();
             usedTweets.add(selectedTweetId);
-            
+
             TweetResponseDto selectedTweet = tweetsCache.get(selectedTweetId);
             if (selectedTweet != null) {
                 UUID tweetAuthorId = selectedTweet.userId();
                 List<UUID> availableUsers = new ArrayList<>(createdUsers);
                 availableUsers.remove(tweetAuthorId);
-                
+
                 if (!availableUsers.isEmpty()) {
                     Collections.shuffle(availableUsers);
                     int halfCount = availableUsers.size() / 2;
                     List<UUID> usersToLike = availableUsers.subList(0, Math.min(halfCount, availableUsers.size()));
-                    
+
                     for (UUID userId : usersToLike) {
                         try {
                             LikeTweetRequestDto likeRequest = LikeTweetRequestDto.builder()
@@ -357,20 +299,20 @@ public class BaseScriptServiceImpl implements BaseScriptService {
             availableTweets.removeAll(usedTweets);
             if (!availableTweets.isEmpty()) {
                 Collections.shuffle(availableTweets);
-                UUID selectedTweetId = availableTweets.get(0);
+                UUID selectedTweetId = availableTweets.getFirst();
                 usedTweets.add(selectedTweetId);
-                
+
                 TweetResponseDto selectedTweet = tweetsCache.get(selectedTweetId);
                 if (selectedTweet != null) {
                     UUID tweetAuthorId = selectedTweet.userId();
                     List<UUID> availableUsers = new ArrayList<>(createdUsers);
                     availableUsers.remove(tweetAuthorId);
-                    
+
                     if (!availableUsers.isEmpty()) {
                         Collections.shuffle(availableUsers);
                         int thirdCount = availableUsers.size() / 3;
                         List<UUID> usersToLike = availableUsers.subList(0, Math.min(thirdCount, availableUsers.size()));
-                        
+
                         for (UUID userId : usersToLike) {
                             try {
                                 LikeTweetRequestDto likeRequest = LikeTweetRequestDto.builder()
@@ -399,19 +341,19 @@ public class BaseScriptServiceImpl implements BaseScriptService {
             availableTweets.removeAll(usedTweets);
             if (!availableTweets.isEmpty()) {
                 Collections.shuffle(availableTweets);
-                UUID selectedTweetId = availableTweets.get(0);
+                UUID selectedTweetId = availableTweets.getFirst();
                 usedTweets.add(selectedTweetId);
-                
+
                 TweetResponseDto selectedTweet = tweetsCache.get(selectedTweetId);
                 if (selectedTweet != null) {
                     UUID tweetAuthorId = selectedTweet.userId();
                     List<UUID> availableUsers = new ArrayList<>(createdUsers);
                     availableUsers.remove(tweetAuthorId);
-                    
+
                     if (!availableUsers.isEmpty()) {
                         Collections.shuffle(availableUsers);
-                        UUID userId = availableUsers.get(0);
-                        
+                        UUID userId = availableUsers.getFirst();
+
                         try {
                             LikeTweetRequestDto likeRequest = LikeTweetRequestDto.builder()
                                 .userId(userId)
@@ -438,20 +380,20 @@ public class BaseScriptServiceImpl implements BaseScriptService {
             availableTweets.removeAll(usedTweets);
             if (!availableTweets.isEmpty()) {
                 Collections.shuffle(availableTweets);
-                UUID selectedTweetId = availableTweets.get(0);
+                UUID selectedTweetId = availableTweets.getFirst();
                 usedTweets.add(selectedTweetId);
-                
+
                 TweetResponseDto selectedTweet = tweetsCache.get(selectedTweetId);
                 if (selectedTweet != null) {
                     UUID tweetAuthorId = selectedTweet.userId();
                     List<UUID> availableUsers = new ArrayList<>(createdUsers);
                     availableUsers.remove(tweetAuthorId);
-                    
+
                     if (!availableUsers.isEmpty()) {
                         Collections.shuffle(availableUsers);
                         int halfCount = availableUsers.size() / 2;
                         List<UUID> usersToRetweet = availableUsers.subList(0, Math.min(halfCount, availableUsers.size()));
-                        
+
                         for (UUID userId : usersToRetweet) {
                             try {
                                 RetweetRequestDto retweetRequest = RetweetRequestDto.builder()
@@ -481,20 +423,20 @@ public class BaseScriptServiceImpl implements BaseScriptService {
             availableTweets.removeAll(usedTweets);
             if (!availableTweets.isEmpty()) {
                 Collections.shuffle(availableTweets);
-                UUID selectedTweetId = availableTweets.get(0);
+                UUID selectedTweetId = availableTweets.getFirst();
                 usedTweets.add(selectedTweetId);
-                
+
                 TweetResponseDto selectedTweet = tweetsCache.get(selectedTweetId);
                 if (selectedTweet != null) {
                     UUID tweetAuthorId = selectedTweet.userId();
                     List<UUID> availableUsers = new ArrayList<>(createdUsers);
                     availableUsers.remove(tweetAuthorId);
-                    
+
                     if (!availableUsers.isEmpty()) {
                         Collections.shuffle(availableUsers);
                         int thirdCount = availableUsers.size() / 3;
                         List<UUID> usersToRetweet = availableUsers.subList(0, Math.min(thirdCount, availableUsers.size()));
-                        
+
                         for (UUID userId : usersToRetweet) {
                             try {
                                 RetweetRequestDto retweetRequest = RetweetRequestDto.builder()
@@ -524,19 +466,19 @@ public class BaseScriptServiceImpl implements BaseScriptService {
             availableTweets.removeAll(usedTweets);
             if (!availableTweets.isEmpty()) {
                 Collections.shuffle(availableTweets);
-                UUID selectedTweetId = availableTweets.get(0);
+                UUID selectedTweetId = availableTweets.getFirst();
                 usedTweets.add(selectedTweetId);
-                
+
                 TweetResponseDto selectedTweet = tweetsCache.get(selectedTweetId);
                 if (selectedTweet != null) {
                     UUID tweetAuthorId = selectedTweet.userId();
                     List<UUID> availableUsers = new ArrayList<>(createdUsers);
                     availableUsers.remove(tweetAuthorId);
-                    
+
                     if (!availableUsers.isEmpty()) {
                         Collections.shuffle(availableUsers);
-                        UUID userId = availableUsers.get(0);
-                        
+                        UUID userId = availableUsers.getFirst();
+
                         try {
                             RetweetRequestDto retweetRequest = RetweetRequestDto.builder()
                                 .userId(userId)
