@@ -2,10 +2,10 @@ package com.twitter.testconfig;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.github.tomakehurst.wiremock.WireMockServer;
-import com.twitter.common.dto.request.tweet.CreateTweetRequestDto;
 import com.twitter.common.dto.request.follow.FollowRequestDto;
 import com.twitter.common.dto.request.like.LikeTweetRequestDto;
 import com.twitter.common.dto.request.retweet.RetweetRequestDto;
+import com.twitter.common.dto.request.tweet.CreateTweetRequestDto;
 import com.twitter.common.dto.request.user.UserRequestDto;
 import com.twitter.common.dto.response.follow.FollowResponseDto;
 import com.twitter.common.dto.response.like.LikeResponseDto;
@@ -134,7 +134,7 @@ public final class BaseScriptTestStubBuilder {
             UserRequestDto userRequest = createUserRequest(i);
             UserResponseDto userResponse = createUserResponse(userId, i);
 
-            WireMockStubHelper.setupCreateUserStub(wireMockServer, objectMapper, userRequest, userResponse);
+            WireMockStubHelper.setupCreateUserStub(wireMockServer, objectMapper, userResponse);
         }
         return userIds;
     }
@@ -279,7 +279,7 @@ public final class BaseScriptTestStubBuilder {
             return followIds;
         }
 
-        UUID centralUser = userIds.get(0);
+        UUID centralUser = userIds.getFirst();
         List<UUID> otherUsers = new ArrayList<>(userIds.subList(1, userIds.size()));
         int halfCount = (userIds.size() - 1) / 2;
 
@@ -347,7 +347,7 @@ public final class BaseScriptTestStubBuilder {
                 tweetAuthorMap.put(tweetId, authorId);
             }
         }
-        
+
         for (Map.Entry<UUID, UUID> entry : tweetAuthorMap.entrySet()) {
             UUID tweetId = entry.getKey();
             UUID authorId = entry.getValue();
@@ -356,7 +356,7 @@ public final class BaseScriptTestStubBuilder {
                 if (userId.equals(authorId)) {
                     continue;
                 }
-                
+
                 LikeTweetRequestDto likeRequest = LikeTweetRequestDto.builder()
                     .userId(userId)
                     .build();
@@ -367,54 +367,6 @@ public final class BaseScriptTestStubBuilder {
                     .createdAt(LocalDateTime.now())
                     .build();
                 WireMockStubHelper.setupLikeTweetStub(wireMockServer, objectMapper, tweetId, likeRequest, likeResponse);
-            }
-        }
-    }
-
-    /**
-     * Sets up WireMock stubs for creating retweets.
-     * <p>
-     * This method creates test data for retweets and configures WireMock stubs
-     * for the POST /api/v1/tweets/{tweetId}/retweet endpoint.
-     * <p>
-     * Since the actual service uses Collections.shuffle() which makes the order unpredictable,
-     * this method creates stubs for all possible combinations that could be created.
-     * <p>
-     * For each tweet, it creates stubs for all users (except the tweet author) to retweet it.
-     *
-     * @param userTweetsMap map of user ID to list of tweet IDs for that user
-     * @param userIds       list of all user IDs
-     */
-    public void setupRetweetsStubs(Map<UUID, List<UUID>> userTweetsMap, List<UUID> userIds) {
-        Map<UUID, UUID> tweetAuthorMap = new HashMap<>();
-        for (Map.Entry<UUID, List<UUID>> entry : userTweetsMap.entrySet()) {
-            UUID authorId = entry.getKey();
-            for (UUID tweetId : entry.getValue()) {
-                tweetAuthorMap.put(tweetId, authorId);
-            }
-        }
-        
-        for (Map.Entry<UUID, UUID> entry : tweetAuthorMap.entrySet()) {
-            UUID tweetId = entry.getKey();
-            UUID authorId = entry.getValue();
-
-            for (UUID userId : userIds) {
-                if (userId.equals(authorId)) {
-                    continue;
-                }
-                
-                RetweetRequestDto retweetRequest = RetweetRequestDto.builder()
-                    .userId(userId)
-                    .comment(null)
-                    .build();
-                RetweetResponseDto retweetResponse = RetweetResponseDto.builder()
-                    .id(UUID.randomUUID())
-                    .tweetId(tweetId)
-                    .userId(userId)
-                    .comment(null)
-                    .createdAt(LocalDateTime.now())
-                    .build();
-                WireMockStubHelper.setupRetweetTweetStub(wireMockServer, objectMapper, tweetId, retweetRequest, retweetResponse);
             }
         }
     }
@@ -441,7 +393,7 @@ public final class BaseScriptTestStubBuilder {
                 tweetAuthorMap.put(tweetId, authorId);
             }
         }
-        
+
         for (Map.Entry<UUID, UUID> entry : tweetAuthorMap.entrySet()) {
             UUID tweetId = entry.getKey();
             UUID authorId = entry.getValue();
@@ -450,7 +402,7 @@ public final class BaseScriptTestStubBuilder {
                 if (userId.equals(authorId)) {
                     continue;
                 }
-                
+
                 LikeTweetRequestDto likeRequest = LikeTweetRequestDto.builder()
                     .userId(userId)
                     .build();
@@ -461,7 +413,7 @@ public final class BaseScriptTestStubBuilder {
                     .createdAt(LocalDateTime.now())
                     .build();
                 WireMockStubHelper.setupLikeTweetStub(wireMockServer, objectMapper, tweetId, likeRequest, likeResponse);
-                
+
                 RetweetRequestDto retweetRequest = RetweetRequestDto.builder()
                     .userId(userId)
                     .comment(null)
@@ -484,24 +436,10 @@ public final class BaseScriptTestStubBuilder {
      * This method configures a WireMock stub for the POST /api/v1/tweets/{tweetId}/like endpoint
      * that returns an error response with the specified HTTP status code.
      *
-     * @param tweetId    the tweet ID to like
      * @param statusCode the HTTP status code to return
      */
-    public void setupLikeCreationError(UUID tweetId, int statusCode) {
-        WireMockStubHelper.setupLikeTweetStubWithError(wireMockServer, tweetId, statusCode);
-    }
-
-    /**
-     * Sets up WireMock stub for retweet creation error.
-     * <p>
-     * This method configures a WireMock stub for the POST /api/v1/tweets/{tweetId}/retweet endpoint
-     * that returns an error response with the specified HTTP status code.
-     *
-     * @param tweetId    the tweet ID to retweet
-     * @param statusCode the HTTP status code to return
-     */
-    public void setupRetweetCreationError(UUID tweetId, int statusCode) {
-        WireMockStubHelper.setupRetweetTweetStubWithError(wireMockServer, tweetId, statusCode);
+    public void setupLikeCreationError(int statusCode) {
+        WireMockStubHelper.setupLikeTweetStubWithError(wireMockServer, statusCode);
     }
 
     /**
@@ -563,9 +501,9 @@ public final class BaseScriptTestStubBuilder {
      * This record is used to return the generated IDs from setup methods
      * so that tests can access them if needed.
      *
-     * @param userIds  list of generated user IDs
+     * @param userIds   list of generated user IDs
      * @param followIds list of generated follow IDs
-     * @param tweetIds list of generated tweet IDs
+     * @param tweetIds  list of generated tweet IDs
      * @author geron
      * @version 1.0
      */
@@ -574,12 +512,6 @@ public final class BaseScriptTestStubBuilder {
         List<UUID> followIds,
         List<UUID> tweetIds
     ) {
-        /**
-         * Constructor for backward compatibility (followIds will be empty list).
-         *
-         * @param userIds  list of generated user IDs
-         * @param tweetIds list of generated tweet IDs
-         */
         public TestStubData(List<UUID> userIds, List<UUID> tweetIds) {
             this(userIds, new ArrayList<>(), tweetIds);
         }
